CI: fix Task2 docker builds (orders + notifier)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,32 @@
 name: CI
-on: [push, pull_request]
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  test-build:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Backend quick test
-        run: |
-          cd backend
-          python -m pip install -r requirements.txt
-          python -c "import app; print('backend import ok')"
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
 
-      - name: Docker build backend
-        run: docker build -t farm-backend:ci ./backend
+      # Task 1
+      - name: Build backend (Task1)
+        run: docker build -t farm-backend ./backend
 
-      - name: Docker build frontend
-        run: docker build -t farm-frontend:ci ./frontend
-              - name: Docker build orders service
-        run: docker build -t orders:ci ./orders
+      - name: Build frontend (Task1)
+        run: docker build -t farm-frontend ./frontend
 
-      - name: Docker build notifier worker
-        run: docker build -t notifier:ci ./notifier
+      # Task 2
+      - name: Build orders service (Task2)
+        run: docker build -t orders-service ./orders
 
+      - name: Build notifier worker (Task2)
+        run: docker build -t notifier-worker ./notifier
